--- a/Research.html
+++ b/Research.html
@@ -85,7 +85,7 @@
                         <a class="nav-link active text-light" aria-current="page" href="index.html" title="Home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-light" href="aboutus.html" title="About Us">About Us</a>
+                        <a class="nav-link text-light" href="aboutus.html" title="About Us">Research</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-light" href="Research.html" title="Research">Research</a>
@@ -583,7 +583,7 @@
     </footer>
     <div class="container-fluid end pt-3 pb-3">
         <h6>© Copyright 2022 <a href="index.html" class="endcenter">Green Corner Advisory</a>. All Rights
-            Reserved</h6>
+            Reserved</h6> ©3rd project @ujjwalsuman
     </div>
     <!--Footer section end-->
 
