--- a/aboutus.html
+++ b/aboutus.html
@@ -583,7 +583,7 @@
     </footer>
     <div class="container-fluid end pt-3 pb-3">
         <h6>© Copyright 2022 <a href="index.html" class="endcenter">Green Corner Advisory</a>. All Rights
-            Reserved</h6>
+            Reserved</h6> ©3rd project @ujjwalsuman
     </div>
     <!--Footer section end-->
 
