--- a/contact.html
+++ b/contact.html
@@ -144,7 +144,7 @@
             <a href="index.html" class="text-light">Home /</a>
         </li>
         <li class="list-inline-item">
-            <a href="aboutus.html" class=" text-white">About us</a>
+            <a href="aboutus.html" class=" text-white">Contact</a>
         </li>
     </ol>
     <!-- slider section end -->
@@ -582,7 +582,7 @@
     </footer>
     <div class="container-fluid end pt-3 pb-3">
         <h6>© Copyright 2022 <a href="index.html" class="endcenter">Green Corner Advisory</a>. All Rights
-            Reserved</h6>
+            Reserved</h6> ©3rd project @ujjwalsuman
     </div>
     <!--Footer section end-->
 
